<resources>
    <string-array name="Gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="request_for_array">
        <item>Absence</item>
        <item>Vacation</item>
        <item>Class suspend</item>
        <item>Other</item>
    </string-array>
    <string-array name="trainee_request_for_array">
        <item>Absence</item>
        <item>Switch class</item>
        <item>Other</item>
    </string-array>
    <string-array name="class_numbers_array">
        <item>Session 1</item>
        <item>Session 2</item>
        <item>Session 3</item>
        <item>Session 4</item>
        <item>Session 5</item>
        <item>Session 6</item>
        <item>Session 7</item>
        <item>Session 8</item>
        <item>Session 9</item>
        <item>Session 10</item>
    </string-array>
    <string-array name="date_array">
        <item>5/5/2017</item>
        <item>10/5/2017</item>
        <item>15/5/2017</item>
        <item>20/5/2017</item>
        <item>25/5/2017</item>
        <item>30/5/2017</item>
        <item>5/6/2017</item>
        <item>15/6/2017</item>
        <item>20/6/2017</item>
        <item>25/6/2017</item>
        <item>30/6/2017</item>
    </string-array>
    <string-array name="time_array">
        <item>10:00 am</item>
        <item>10:30 am</item>
        <item>11:00 am</item>
        <item>12:00 pm</item>
        <item>12:30 pm</item>
        <item>01:00 pm</item>
        <item>02:00 pm</item>
        <item>02:30 pm</item>
        <item>05:00 pm</item>
    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
        <item>None</item>
    </string-array>
    <string-array name="regarding_array">
        <item>Trainee</item>
        <item>Coach</item>
        <item>Admin</item>
        <item>Pool</item>
        <item>Other</item>

    </string-array>
    <string-array name="complain_to_array">
        <item>Coach</item>
        <item>Management</item>
    </string-array>
    <string-array name="empty_array">
        <item> 0 </item>
    </string-array>
    <string name="app_name">SH AQUATICS</string>
    <string name="done">Done</string>
    <string name="user_name">User name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="slash">/</string>
    <string name="enter_verfication_code">Enter verfication code</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_classes">My Sessions</string>
    <string name="notifications">Notifications</string>
    <string name="request">Request</string>
    <string name="complains">Complains</string>
    <string name="reports">Reports</string>
    <string name="certificates">Certificates</string>
    <string name="academy_s_website">Academy\'s website</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="course_name">Level Name</string>
    <string name="date">Date</string>
    <string name="class_number">Session number</string>
    <string name="score">Score</string>
    <string name="group_number">Class number</string>
    <string name="coach_s_name">Coach\'s name</string>
    <string name="coach_s_notes">Coach\'s notes</string>
    <string name="creation_date">Creation date</string>
    <string name="course_name_class_number">Level name, Session number</string>
    <string name="time">Time</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact us</string>
    <string name="for_parents">
        Parents of SH Aquatic members are expected to adhere to the following guidelines
        and supervision requirements.
        These guidelines are designed to promote and ensure a positive and safe experience
        for everyone:
    </string>
    <string name="pool">
        All SH Aquatic members will be required to use the separate entrance to
        the Swimming Pool and head directly to the changing rooms.
    </string>
    <string name="punctuality2">
        It is important that parents ensure their children are ready to start their class
        at the scheduled time with their required training equipment.
        \nWhen swimmers arrive late, it causes a disruption to the class
        and swimmers miss the warm up, which is a very important part of the training session.
    </string>
    <string name="training_equipment2">
        Swimsuit, Towel, Swimming Cap*, Goggles* are mandatory
        *will be available to buy directly at the pool
    </string>
    <string name="are_parents">
        Parents often ask if they need to stay at the pool during class time - this depends on your child’s age
    </string>
    <string name="are_parents2">
        •	A parent of swimmers aged less than 10 years are required to stay at the pool during their child is in a class.
        \n•	Parents of swimmers aged 10 years and over do not need to stay to watch their child’s class - this is optional.
        \n•	Parents of older swimmers (14 years+) are encouraged to occupy themselves during training rather than stay and watch their child train.
    </string>
    <string name="parent_etiquette">
        Parents who choose to watch their child’s class are asked to please
        sit in one of the areas where seating is provided. Please do not sit
        or stand on the pool deck as this should be kept clear for coaches and swimmers.
        \nParents should not attempt to communicate (verbally or non-verbally)
        with their child during a class - this causes distractions.
        \nParents should not talk or comment to the coach during class time.
        It is important that parents understand that coaches and students
        must not be interrupted whilst a class is being conducted.
    </string>
    <string name="communication_with_coaches2">
        Parents may, if necessary, briefly communicate with coaches after a class.
        \nNote: A reasonable amount of communication with your child\'s coach is approximately
        a few minutes each term
        \nIt is important that parents understand that coaches and students
        must not be interrupted whilst a class is being conducted.
        \nParents meetings will be organized in regular periods and any update will be
        announced and published.
        \nParents may request an additional meeting with the coach,
        please contact us if you wish to arrange this.
    </string>
    <string name="starting_the_class2">
        The responsible coach will welcome and collect the swimmers at the
        “kiss and drop” point in time to start the session.
        \nDuring the class your child is under full responsibility and supervision
        of the coach.
        \nWe request you support us doing our work at its best by let the coach teach
        and coach your child.
    </string>
    <string name="finishing_the_class2">
        After each session the coach will bring the group to the “kiss and drop”
        point and hand over responsibility and supervision to the parent.
    </string>
    <string name="locker_changing_rooms2">
        SH Aquatics does not provide supervision in the locker/changing rooms
        and we assume no liability for your belongings.
    </string>
    <string name="missed_class_policy_refund2">
        In general if a swimmer misses their regular class,
        no make-up classes will be provided.
        \nIf a swimmer will be unable to attend classes for a period of two or more weeks
        due to a significant injury or illness,
        an arrangement to switch the group will be provided.
        \n\nWe would appreciate your notification or announcement of any planned absence
        ahead. Attendance reports are made by the coaches directly.
        \n\nSH Aquatics do not offer refunds for Academy classes and swimming training services.
        In exceptional and medical circumstances, in which a valid doctor's certificate
        must be provided, partly refunds may be granted.
        \nAll refunds are awarded at the discretion of the managing director.
    </string>
    <string name="general_conduct2">
        It is important that parents behave maturely and treat SH Aquatic members and staff
        respectfully.
        \nAggressive or inappropriate behavior will not be tolerated.
        \n\nBy signing the registration form and payments you agree and accept the general
        terms of conditions as well as the privacy policy.
    </string>
    <string name="booking_fee2">
        •	The booking fee is payable before your first lesson . Incoming payments secure your booking.
        \n•	Your booking fee is redeemable for your registered term.
    </string>
    <string name="payment_options2">
        •	SH Aquatics accepts bank transfer only, no cash payments.
        Please, provide your bank confirmation at the first lesson.
    </string>
    <string name="term_payment_policy2">
        •	Our fees are calculated on a term basis and you are required to pay for the full term.
        \n•	Term payments must be made in full; prior to the first lesson.
        \n•	If payment is not received before your first lesson we cannot guarantee your booking.
        If you are experiencing any difficult with payment,
        please, discuss with our administrative staff.
        \n•	In case SH Aquatics needs to cancel lessons
        (due to maintenance or technical problems) make up lessons will be provided.
        \n•	SH Aquatics do not offer refunds for Academy classes and swimming training services.
        In exceptional and medical circumstances,
        in which a valid doctor's certificate must be provided,
        partly refunds may be granted. All refunds are awarded at the discretion of the managing director.

    </string>
    <string name="pool_entry">•\tPool entry</string>
    <string name="punctuality">•\tPunctuality</string>
    <string name="training_equipment">•\tTraining equipment</string>
    <string name="are_parents_required_to_stay_at_the_pool_during_classes">•\tAre parents required to stay at the pool during classes?</string>
    <string name="parent_etiquette_during_class_time">•\tParent etiquette during class time</string>
    <string name="communication_with_coaches">•\tCommunication with coaches</string>
    <string name="starting_the_class">•\tStarting the class</string>
    <string name="finishing_the_class">•\tFinishing the class</string>
    <string name="locker_changing_rooms">•\tLocker/Changing Rooms</string>
    <string name="missed_class_policy_refund">•\tMissed Class Policy - Refund</string>
    <string name="general_conduct">•\tGeneral conduct</string>
    <string name="booking_fee">Booking Fee</string>
    <string name="payment_options">Payment Options</string>
    <string name="term_payment_policy">Term Payment Policy</string>
</resources>