<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_side_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_myClasses"
            android:icon="@drawable/ic_side_today"
            android:title="@string/my_classes" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_side_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_side_request"
            android:title="@string/request" />
        <!--item
            android:id="@+id/nav_complains"
            android:icon="@drawable/ic_side_complain"
            android:title="@string/complains" /-->
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_side_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_certificates"
            android:visible="false"
            android:icon="@drawable/ic_certficates"
            android:title="@string/certificates" />

        <item
            android:id="@+id/nav_booking"
            android:visible="false"
            android:icon="@drawable/ic_booking"
            android:title="@string/my_cart" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_question"
            android:title="@string/contact_us" />


        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_side_info"
            android:title="@string/terms_amp_conditions" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_side_logout"
            android:title="@string/logout" />

    </group>

</menu>
