<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_side_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_side_info"
            android:title="@string/academy_s_website" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_question"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_side_logout"
            android:title="@string/logout" />

    </group>

</menu>
