<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.quantumsit.sportsinc.AboutUs_fragments.PaymentRulesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPayment1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/text_view_background"
                android:padding="10dp"
                android:text="@string/booking_fee"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textViewPayment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/booking_fee2"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/textViewPayment3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/text_view_background"
                android:padding="10dp"
                android:text="@string/payment_options"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textViewPayment4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/payment_options2"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/textViewPayment5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/text_view_background"
                android:padding="10dp"
                android:text="@string/term_payment_policy"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textViewPayment6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/term_payment_policy2"
                android:textColor="@color/colorText" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>