<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/classNumberTextView_adminCurrentClassesItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorTextDark"
        android:text="@string/class_number" />

    <TextView
        android:id="@+id/dateTextView_adminCurrentClassesItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:text="@string/date" />

    <TextView
        android:id="@+id/timeTextView_adminCurrentClassesItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorGray"
        android:text="@string/time" />
</LinearLayout>
